# opencode-gpt-unlocked

./: README.md  opencode_patcher.py  package.json  pyproject.toml  refusal-patcher.ts  tsconfig.json
