[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-gpt-unlocked"
version = "0.1.0"
description = "Refine OpenCode sessions by removing refusals and reasoning"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "zhexulong" },
]
license = { text = "MIT" }
dependencies = []

[project.scripts]
opencode-patcher = "opencode_patcher:main"

[tool.setuptools]
py-modules = ["opencode_patcher"]